--- a/web/styles/style.less
+++ b/web/styles/style.less
@@ -1,26 +1,49 @@
 #chart {
   width:920px;
   height:400px;
-  background-color:Linen;
+  background-color: Linen;
   float: none;
   margin: 0 auto;
 }
 body {
   background-image: url(/images/subtle-stripes-pattern-2273.png);
-}
-.jumbotron {
-  padding-top: 0px;
-  background: rgba(176, 196, 222, 0.5);
-}
-._3d {
-  font-family: 'Play', cursive;
-  tline-height: 1em;
-  color: Linen;
-  font-size: 74px;
-  text-shadow: 0px 0px 0 rgb(240,240,240),
-               1px 1px 0 rgb(235,235,235),
-               2px 2px 0 rgb(230,230,230),
-               3px 3px 2px rgba(0,0,0,0),
-               3px 3px 1px rgba(0,0,0,0.5),
-               0px 0px 2px rgba(0,0,0,.2);
+
+  .jumbotron {
+    padding-top: 0px;
+    background: rgba(176, 196, 222, 0.5);
+  }
+
+  ._3d {
+    font-family: 'Play', cursive;
+    line-height: 1em;
+    font-size: 74px;
+    text-shadow: 0px 0px 0 rgb(240, 240, 240),
+                 1px 1px 0 rgb(235, 235, 235),
+                 2px 2px 0 rgb(230, 230, 230),
+                 3px 3px 2px rgba(0, 0, 0, 0),
+                 3px 3px 1px rgba(0, 0, 0, 0.5),
+                 0px 0px 2px rgba(0, 0, 0, .2);
+  }
+
+  h1._3d {
+    color: DarkSlateGray;
+  }
+  .footer {
+    overflow: hidden;
+    font-size: 0.8em;
+    margin-left: 50px;
+    margin-right: 50px;
+    background-color: rgba(105, 105, 105, 0.5);
+    color: #3e454c;
+    text-shadow: rgba(255, 255, 255, .5) 0 1px 0;
+    line-height: 1.8;
+    .text {
+      font-size: 1.2em;
+    }
+    .hilite {
+      background-color: rgba(105, 105, 105, .1);
+      padding: 0 1px 0 1px;
+      border-radius: 2px;
+    }
+  }
 }
