added map funcs, slight redesign

--- a/web/styles/style.less
+++ b/web/styles/style.less
@@ -11,6 +11,7 @@ body {
   .jumbotron {
     padding-top: 0px;
     background: rgba(176, 196, 222, 0.5);
+    min-width: 1050px;
   }
 
   ._3d {
@@ -37,6 +38,7 @@ body {
     color: #3e454c;
     text-shadow: rgba(255, 255, 255, .5) 0 1px 0;
     line-height: 1.8;
+    min-width: 1000px;
     .text {
       font-size: 1.2em;
     }
