--- a/web/styles/style.less
+++ b/web/styles/style.less
@@ -14,10 +14,20 @@ body {
     min-width: 1050px;
   }
 
+  h3 {
+    font-size: 40px;
+    span.buy {
+      color: Tomato;
+    }
+    span.sell {
+      color: MediumSeaGreen;
+    }
+  }
+
   ._3d {
     font-family: 'Play', cursive;
     line-height: 1em;
-    font-size: 74px;
+    /*font-size: 74px;*/
     text-shadow: 0px 0px 0 rgb(240, 240, 240),
                  1px 1px 0 rgb(235, 235, 235),
                  2px 2px 0 rgb(230, 230, 230),
